<resources>
    <string name="app_name">Popular Movies</string>

    <!-- activities titles -->
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_browse_movies_fragment">Browse Movies</string>
    <string name="title_favorite_movies_fragment">Favorite Movies</string>
    <!---->

    <!-- Content Descriptions -->
    <string name="movie_poster_imageview_content_description">Movie Poster Image</string>
    <string name="movie_thumbnail_imageview_content_description">Movie Thumbnail Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!---->

    <!-- Menu -->
    <string name="action_sort_by_popularity">Sort by popularity</string>
    <string name="action_sort_by_rating">Sort by rating</string>
    <string name="action_sort_by">Sort movies by</string>
    <!---->

    <!-- Messages -->
    <string name="no_connection_error_message">No Internet Connection!</string>
    <string name="connection_timeout_error_message">Connection Timed Out!</string>
    <string name="load_movies_error_msg">Error occurred while trying to load movies!</string>
    <string name="load_movie_details_error_msg">Error occurred while trying to load movie details!</string>
    <string name="empty_movies_list_msg">No movies to display!</string>
    <string name="no_videos_msg">There\'re no videos to display!</string>
    <string name="error_loading_videos_msg">Couldn\'t load videos!</string>
    <string name="no_reviews_msg">There\'re no reviews to display!</string>
    <string name="error_loading_reviews_msg">Couldn\'t load reviews!</string>
    <string name="error_open_url">Couldn\'t open the URL on your device!</string>
    <string name="endless_scrolling_end_msg">The end has been reached!</string>
    <string name="movie_favorite_unfavorite_error">An error has occurred! Please try again.</string>
    <!---->

    <!-- Views text -->
    <string name="retry_loading_text">Retry</string>
    <string name="total_vote">/10</string>
    <string name="movie_runtime">%1$d min.</string>
    <string name="mark_as_favorite_button_text">Mark as Favorite</string>
    <string name="mark_as_unfavorite_button_text">Mark as Unfavorite</string>
    <string name="overview_label">Overview</string>
    <string name="videos_label">Videos</string>
    <string name="reviews_label">Reviews</string>
    <string name="author_label">Written by:</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_browse_movies_title">Browse Movies</string>
    <string name="nav_favorite_movies_title">Favorite Movies</string>
    <string name="external_resources_text">External Resources</string>
    <string name="imdb_link_text">View movie\'s page on IMDB.com</string>
    <!---->

    <!-- Misc -->
    <string name="youtube_video_base_url" translatable="false">https://www.youtube.com/watch?v=%s</string>
    <string name="youtube_video_thumbnail_url" translatable="false">http://img.youtube.com/vi/%s/default.jpg</string>
    <string name="tmdb_img_url" translatable="false">"http://image.tmdb.org/t/p/w185%s"</string>
    <string name="tmdb_movie_page_base_link" translatable="false">https://www.themoviedb.org/movie/%d</string>
    <string name="imdb_movie_page_base_link" translatable="false">https://www.imdb.com/title/%s</string>
    <string name="show_more_text">"  Show more"</string>
    <string name="show_less_text">"  Show less"</string>
    <!---->

</resources>
