<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.BrowseMoviesFragment">
    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/group_sorting"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_popularity"
                    android:orderInCategory="100"
                    android:title="@string/action_sort_by_popularity"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_by_rating"
                    android:orderInCategory="200"
                    android:title="@string/action_sort_by_rating"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
